--- a/indix.html
+++ b/indix.html
@@ -11,7 +11,8 @@
 
 <body>
 
-    <h1 class="some-heading">GIT WORKFLOW</h1>
+    <h1 style="color: red;" class="some-heading">GIT WORKFLOW</h1>
+    
 
 </body>
 
